src/styles/material.scss
/*
 * Copyright (c) 2023-2025 Orange. All rights reserved.
 * This software is distributed under the BSD 3-Clause-clear License, the text of which is available
 * at https://spdx.org/licenses/BSD-3-Clause-Clear.html or see the "LICENSE" file for more details.
 */

/*******************************************************************/
/* This file override Angular Material styles                      */
/*******************************************************************/

.mat-mdc-progress-bar .mat-mdc-progress-bar-fill {
  transition-duration: initial !important;
}

.mat-button-toggle-standalone,
.mat-button-toggle-group {
  font-size: 0.8em !important;
  max-height: 30px !important;
}

.mat-badge-small .mat-badge-content {
  font-size: 0px !important;
}

.mat-mdc-progress-bar {
  height: 5px !important;
}

.mdc-linear-progress__buffer-bar {
  display: none !important;
}

.mat-mdc-progress-bar {
  height: 5px !important;
}
.mat-mdc-progress-bar-secondary {
  animation-duration: 1000ms !important;
}

.mat-mdc-progress-bar-background {
  fill: #ffffff00 !important;
}
.mat-mdc-progress-bar-buffer {
  display: none !important;
}

.mat-mdc-flat-button,
.search-input-btn,
.mat-mdc-unelevated-button,
.mat-mdc-stroked-button,
.mat-mdc-outlined-button,
mat-button-toggle-group {
  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2) !important;
}

.mat-mdc-flat-button:hover,
.search-input-btn:hover,
.mat-mdc-unelevated-button:hover,
.mat-mdc-outlined-button:hover,
.mat-mdc-stroked-button:hover,
mat-button-toggle-group:hover {
  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.4) !important;
}

.mat-tab-label-active {
  color: var(--primary) !important;
}

.mat-mdc-tab-header {
  width: 100% !important;
  background-color: transparent !important;
  margin-bottom: 10px;
}
.mat-mdc-tab-header .mat-mdc-tab {
  flex-grow: 0 !important;
  min-width: 100px;
  width: auto;
  padding: 0 5px !important;
  align-items: center;

  height: var(--header-height) !important;
  z-index: 1000;
  box-shadow: none !important;
}

.mat-mdc-tab-labels {
  justify-content: center;
  align-items: center;
}

button {
  max-height: 2rem !important;
  .mat-mdc-button-touch-target {
    max-height: 2rem !important;
  }

  em {
    .mat-icon {
      font-size: 24px !important;
      margin: 8px -4px 0 5px !important;
    }
  }
}

.mat-icon {
  width: unset !important;
  margin: unset !important;
  font-size: 18px !important;
  min-width: 21px;
}

.mat-mdc-tab-body-wrapper {
  flex: 1;
  z-index: 1000 !important;
  height: 100%;
}

.mdc-button {
  font-size: 1em !important;
}

.mat-mdc-mini-fab {
  width: 36px !important;
  height: 36px !important;
}

.mat-badge-small .mat-badge-content {
  font-size: 0px !important;
  width: 8px !important;
  height: 8px !important;
  line-height: 12px !important;
  top: 9px !important;
  right: 9px !important;
  left: unset !important;
}

.mat-elevation-z1 {
  border-bottom: 0px solid var(--bg-color-10) !important;
  box-shadow: none !important;
}

.mat-mdc-menu-item-text {
  mat-checkbox {
    margin-left: -12px;
  }
}

.mat-mdc-elevation-specific {
  box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.12) !important;
}

.mat-mdc-simple-snack-bar {
  color: white !important;
}

.mat-mdc-snack-bar-container.success {
  .mdc-snackbar__surface {
    background-color: var(--primary) !important;
  }
}

.mat-mdc-snack-bar-container.warning {
  .mdc-snackbar__surface {
    background: var(--accent) !important;

    .mat-mdc-snack-bar-label {
      color: var(--primary);
    }
    button {
      border: 2px solid var(--primary);
      color: var(--primary) !important;
    }
  }
}

.mat-mdc-snack-bar-container.error {
  .mdc-snackbar__surface {
    background: var(--red-main) !important;
  }
}

.checkbox-select-all {
  margin-bottom: 1em;

  .mat-menu-panel mat-checkbox label span {
    text-transform: uppercase;
  }
}

.checkbox-select {
  mat-checkbox {
    label {
      padding-left: 1.5em !important;
      padding-right: 3em !important;
    }
  }
}

.mat-mdc-tab-group {
  z-index: 99;
  position: relative;
}

mat-button-toggle-group {
  margin-right: 0.8em;
  height: 36px;
  line-height: 34px !important;
  max-height: 36px;

  .mat-button-toggle-label-content {
    line-height: 30px !important;
  }

  .mat-button-toggle-checked {
    background-color: var(--primary) !important;
    color: white !important;
  }
}
mat-pseudo-checkbox {
  display: none !important;
}

.mat-mdc-menu-trigger {
  white-space: nowrap !important;
}

.mat-button-toggle-standalone,
.mat-button-toggle-group {
  font-size: 0.8em !important;
  height: 32px !important;
}

.mat-button-toggle {
  color: var(--primary) !important;
}

.mat-tab-label-content {
  label {
    cursor: pointer;
  }
}

.mat-drawer-container {
  color: var(--bg-color-contrast) !important;
}

mat-checkbox .mdc-form-field label {
  font-size: 0.75rem !important;
  line-height: 1rem;
  padding: 0.6rem 0;
  min-width: 100%;
  text-align: left;
}

.mat-mdc-slider {
  min-width: 80px !important;
}
.mat-mdc-slider .mdc-slider__thumb-knob {
  transform: scale(0.7) translate(-70%, -80%) !important;
}

.mat-mdc-dialog-container .mdc-dialog__surface {
  padding: 1rem;
}

button.mdc-icon-button {
  padding: 0 !important;
  max-height: 2rem !important;
  max-width: 2rem !important;
}

.mat-mdc-slider-visual-thumb .mat-ripple {
  display: none !important;
}
.mat-mdc-menu-item-text {
  line-height: 1rem !important;
  font-family: 'poppins', sans-serif !important;
  font-size: 0.9em !important;
}

.cdk-overlay-connected-position-bounding-box {
  // Restrict full-screen mode to the component's layout. #30
  // sticky otherwize menu dialog shift
  position: sticky !important;
}

/**
  * Angular 19 Material styles Migration
  */

.mat-mdc-tooltip,
.mat-mdc-tooltip .mdc-tooltip__surface {
  font-size: 11px !important;
  font-weight: 100 !important;
  background: var(--bg-tooltip) !important;
  color: var(--color-tooltip) !important;
  font-style: normal !important;
  border-radius: 0 !important;
  border: 1px solid var(--color-tooltip) !important;
}

.mat-mdc-menu-content {
  background-color: var(--bg-color) !important;
}

.mat-mdc-tab-label-container {
  border-bottom-style: unset !important;
}

.mdc-slider__thumb-knob {
  border-radius: 50% !important;
}

.mat-badge-active {
  background-color: var(--selected) !important;
  border-radius: 50% !important;
}

.mdc-tab__content {
  cursor: pointer !important;
  label {
    cursor: pointer !important;
  }
}

mat-tab-body {
  animation-duration: 0s !important;
}

.mat-mdc-menu-trigger {
  padding: 0 0.6rem !important;
}

mat-sidenav {
  border-radius: 0 !important;
}

.mdc-slider__track--active,
.mdc-slider__track--inactive {
  height: 3px !important;
  background-color: var(--bg-color-30) !important;
}

.mat-mdc-menu-item.selected-item {
  background-color: var(--bg-tooltip) !important;
  color: var(--bg-color) !important;
}

.mat-mdc-menu-item {
  min-height: 36px !important;
  max-height: unset !important;
}

.mdc-switch__handle,
.mdc-switch__track {
  border-radius: 0 !important;
}
.mdc-switch {
  border: 1px solid black !important;
  min-height: 26px;
  width: 50px;
  margin-right: 0.8em !important;
}
.mdc-switch__track {
  height: 2rem !important;
}
.mat-internal-form-field > label {
  padding-right: 10px !important;
}
.mat-mdc-menu-item-text {
  padding: 5px 0 !important;
}

.mat-ripple:not(:empty) {
  transform: none !important;
}

button {
  overflow: hidden !important;
}

.mat-menu-item-checkbox {
  .mat-mdc-menu-item-text {
    padding: 0 !important;
  }
}

.mdc-button__label {
  align-items: center;
  display: flex;
  font-size: 1em;
}

mat-dialog-container {
  .mat-mdc-dialog-surface {
    // border: 1px solid #000000 !important;
    border-radius: var(--border-radius) !important;
    background-color: var(--bg-color-20) !important;
    border-radius: var(--border-radius) !important;
  }
}
.mdc-checkbox .mdc-checkbox__background {
  border-width: 1px;
}

mat-button-toggle-group,
button,
.search-input-btn {
  border-width: 1px !important;
  border-color: black !important;
  border-radius: var(--border-radius) !important;
}

button.mat-accent {
  color: black !important;
}

.mdc-tab-indicator .mdc-tab-indicator__content {
  border-color: #ff6600 !important;
}

.mdc-checkbox,
.mdc-checkbox__native-control,
.mdc-checkbox__background {
  width: 16px !important;
  height: 16px !important;
}

.mat-mdc-tab-group,
.mat-mdc-tab,
.mat-mdc-tab-labels,
.mat-mdc-tab-body {
  font-size: inherit !important;
}

.mdc-tab__text-label {
  font-weight: 500;
  font-size: 0.94em !important;
}

.mat-mdc-select-panel {
  background-color: white !important;
}

